<resources>
    <string name="app_name">elo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_more">More</string>
    <string name="logo_desc">Clothing Brand</string>
</resources>