<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.elo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.elo.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.example.elo.ui.categories.CategoriesFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_categories" />
    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.elo.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/nav_more"
        android:name="com.example.elo.ui.more.MoreFragment"
        android:label="@string/menu_more"
        tools:layout="@layout/fragment_more" />
</navigation>