<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--<item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />-->

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/menu_categories"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/baseline_shopping_cart_24"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_more"
            android:icon="@drawable/ic_more"
            android:title="@string/menu_more" />

    </group>
</menu>